[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_server_dwave"
version = "0.1.0"
description = "MCP Server for D-Wave Quantum Annealing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",
    "dwave-ocean-sdk>=8.0.0",
    "dwave-neal>=0.6.0",
    "numpy>=1.26.0",
    "dimod>=0.12.14",
    "pydantic>=2.7.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0"
]

[project.scripts]
mcp-server-dwave = "mcp_server_dwave:serve"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.284",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function" 